# NikkouServerBOT

./: .tool-versions  I  README.md  blocklist.json  bot.py  env_見本  pyproject.toml  requirements.txt
